--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma migrate deploy && npx prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.624.0",
@@ -14,7 +13,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
-    "@prisma/client": "^5.11.0",
     "@reduxjs/toolkit": "^2.2.1",
     "mui-file-dropzone": "^4.0.2",
     "multer": "^1.4.5-lts.1",
@@ -36,7 +34,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
-    "prisma": "^5.13.0",
     "typescript": "^5"
   }
 }
